# npe

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  enums.py  main.py  models.py  schemas.py  services.py
backend/src/: config.py  database.py  main.py  models.py  schemas.py  services.py
backend/src/api/: dependencies.py
backend/src/api/routes/: __init__.py  auth.py
backend/src/core/: config.py  database.py  dependencies.py  security.py
backend/src/models/: __init__.py  base.py  models.py  submission.py  task.py  user.py
backend/src/repository/: __init__.py  attachment.py  category.py  repository.py  session.py  sessions.py  solve.py  task.py  uow.py  user.py  users.py
backend/src/routes/: __init__.py  auth.py  categories.py  tasks.py
backend/src/schemas/: __init__.py  auth.py  base.py  category.py  schemas.py  submission.py  task.py  user.py
backend/src/services/: __init__.py  categories.py  services.py  sessions.py  tasks.py  users.py
backend/src/utils/: repository.py  uow.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/public/content/: index.json
frontend/src/: main.jsx  main.tsx
frontend/src/api/: axios.ts  axiosApi.ts  content.ts
frontend/src/auth/: AuthContext.tsx  AuthGate.tsx  ProtectedRoute.tsx
shoto/: Dockerfile  nginx.conf  pnpm-lock.yaml
shoto/src/: App.jsx
(+72 files in other folders)
